samples/learningOverview/invalid/R23.dita
<?xml version="1.0" encoding="UTF-8"?>
<learningOverview id="lo1" xml:lang="en">
  <title>Main Learning Overview Title</title>
  <prolog/>
  <learningOverviewbody>
    <lcIntro><title>Intro Title</title><p>Intro text.</p></lcIntro>
    <lcAudience><title>Audience Title</title>Audience text.</lcAudience>
    <lcDuration><title>Duration Title</title><lcTime time="1hr">1 hour</lcTime></lcDuration>
    <lcObjectives><title>Objectives Title</title><lcObjectivesGroup><lcObjective>Obj</lcObjective></lcObjectivesGroup></lcObjectives>
    <section id="instructor_notes">
      <title>Instructor Notes</title>
      <p>Instructor notes content.</p>
    </section>
    <section id="bad_additional_section">
      <p>This additional section is missing its title.</p>
    </section>
  </learningOverviewbody>
</learningOverview>